--- a/nama-app/src/index.css
+++ b/nama-app/src/index.css
@@ -1,13 +1,147 @@
-body {
+/* reset styles */
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* body */
+body {
+  background-color: #e29607;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(240, 239, 239);
+}
+/* app */
+.app {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: #fff;
+  min-height: 100vh;
+}
+/* Tittle */
+.title {
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 1.0;
+  color: rgb(117, 0, 0);
+  margin: 0 0 20px 0;
+}
+/* Form */
+.form {
+  margin: 0 0 20px 0;
+}
+/* Form label */
+.form label {
+  display: block;
+  margin: 10px 0;
+}
+/* Form input */
+.form input,
+.form textarea {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: 1px solid rgb(155, 1, 1);
+  border-radius: 3px;
+  box-sizing: border-box;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(104, 2, 2);
+}
+/* Form submit */
+.form input[type='submit'] {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  border: none;
+  border-radius: 3px;
+  background-color: #00bcd4;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 20px;
+}
+/* playlist container */
+.playlist-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  margin: 16px auto;
+}
+/* items inside playlist */
+.playlist-item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  border: 2px solid rgb(253, 194, 0);
+  padding: 10px;
+  margin: 8px auto;
+}
+/* playlist image */
+.playlist-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 20px;
+}
+/* playlist content */
+.playlist-content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  flex-shrink: 1;
+  max-width: 72%;
+}
+/* playlist title */
+.playlist-title {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(3, 2, 2);
+}
+/* playlist description */
+.playlist-description {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: rgb(0, 0, 0);
+}
+/* playlist actions */
+.playlist-actions {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: auto;
+}
+/* playlist action */
+.playlist-action {
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 16px;
+  background-color: #fdba00;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  margin-left: 10px;
+  border: rgb(45, 0, 128) 1px solid;
+}
+/* truncate text */
+.text-truncate {
+  display: block;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
