--- a/nama-app/src/index.css
+++ b/nama-app/src/index.css
@@ -11,22 +11,21 @@ body {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
-  color: rgb(240, 239, 239);
 }
 /* app */
 .app {
-  max-width: 600px;
+  max-width: 900px;
   margin: 0 auto;
-  padding: 20px;
-  background-color: #fff;
+  padding: 15px;
+  background-color: rgb(243, 243, 243);
   min-height: 100vh;
 }
 /* Tittle */
 .title {
-  font-size: 35px;
+  font-size: 45px;
   font-weight: 400;
   line-height: 1.0;
-  color: rgb(117, 0, 0);
+  color: rgb(117, 66, 0);
   margin: 0 0 20px 0;
 }
 /* Form */
@@ -44,7 +43,7 @@ body {
   display: block;
   width: 100%;
   padding: 10px;
-  border: 1px solid rgb(155, 1, 1);
+  border: 1px solid rgb(228, 0, 0);
   border-radius: 3px;
   box-sizing: border-box;
   font-size: 14px;
@@ -92,8 +91,8 @@ body {
 .playlist-image {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
-  margin-right: 20px;
+  border-radius: 5%;
+  margin-right: 25px;
 }
 /* playlist content */
 .playlist-content {
@@ -107,16 +106,16 @@ body {
 /* playlist title */
 .playlist-title {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.5;
-  color: rgb(3, 2, 2);
+  color: rgb(0, 23, 230);
 }
 /* playlist description */
 .playlist-description {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
-  color: rgb(0, 0, 0);
+  color: rgb(32, 32, 32);
 }
 /* playlist actions */
 .playlist-actions {
@@ -144,4 +143,42 @@ body {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+
+.d-flex {
+  display: grid;
+}
+.justify-between {
+  justify-content: space-between;
+}
+.btn {
+  display: inline-block;
+  font-weight: 900;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 1rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  cursor: pointer;
+}
+.btn-spotify {
+  color: rgb(0, 0, 0);
+  background-color: #f3ef00;
+  border-color: #f0ec00;
+}
+.btn-danger {
+  color: rgb(2, 187, 100);
+  background-color: #070404;
+  border-color: #000000;
+}
+.align-center {
+  align-items: center;
 }
