--- a/nama-app/src/index.css
+++ b/nama-app/src/index.css
@@ -1,10 +1,8 @@
-/* reset styles */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-/* body */
 body {
   background-color: #e29607;
   font-family: sans-serif;
@@ -12,7 +10,6 @@ body {
   font-weight: 400;
   line-height: 1.5;
 }
-/* app */
 .app {
   max-width: 900px;
   margin: 0 auto;
@@ -20,7 +17,6 @@ body {
   background-color: rgb(243, 243, 243);
   min-height: 100vh;
 }
-/* Tittle */
 .title {
   font-size: 45px;
   font-weight: 400;
@@ -28,16 +24,13 @@ body {
   color: rgb(117, 66, 0);
   margin: 0 0 20px 0;
 }
-/* Form */
 .form {
   margin: 0 0 20px 0;
 }
-/* Form label */
 .form label {
   display: block;
   margin: 10px 0;
 }
-/* Form input */
 .form input,
 .form textarea {
   display: block;
@@ -51,7 +44,6 @@ body {
   line-height: 1.5;
   color: rgb(104, 2, 2);
 }
-/* Form submit */
 .form input[type='submit'] {
   display: block;
   width: 100%;
@@ -66,7 +58,6 @@ body {
   cursor: pointer;
   margin-top: 20px;
 }
-/* playlist container */
 .playlist-container {
   display: flex;
   flex-direction: column;
@@ -76,7 +67,6 @@ body {
   height: 100%;
   margin: 16px auto;
 }
-/* items inside playlist */
 .playlist-item {
   display: flex;
   flex-direction: row;
@@ -87,14 +77,12 @@ body {
   padding: 10px;
   margin: 8px auto;
 }
-/* playlist image */
 .playlist-image {
   width: 50px;
   height: 50px;
   border-radius: 5%;
   margin-right: 25px;
 }
-/* playlist content */
 .playlist-content {
   display: flex;
   flex-direction: column;
@@ -103,21 +91,19 @@ body {
   flex-shrink: 1;
   max-width: 72%;
 }
-/* playlist title */
 .playlist-title {
   font-size: 16px;
   font-weight: 600;
   line-height: 1.5;
   color: rgb(0, 23, 230);
 }
-/* playlist description */
+
 .playlist-description {
   font-size: 14px;
   font-weight: 400;
   line-height: 1.5;
   color: rgb(32, 32, 32);
 }
-/* playlist actions */
 .playlist-actions {
   display: flex;
   flex-direction: row;
@@ -125,18 +111,16 @@ body {
   justify-content: flex-end;
   margin-left: auto;
 }
-/* playlist action */
 .playlist-action {
   text-align: center;
   border-radius: 6px;
   padding: 8px 16px;
-  background-color: #fdba00;
+  background-color: #00fd15;
   color: rgb(0, 0, 0);
   cursor: pointer;
   margin-left: 10px;
   border: rgb(45, 0, 128) 1px solid;
 }
-/* truncate text */
 .text-truncate {
   display: block;
   width: 100%;
