--- a/New folder/src/Assets/Music.css
+++ b/New folder/src/Assets/Music.css
@@ -26,14 +26,13 @@
 .music-title {
     font-size: 25px;
     text-align: left;
-    margin-bottom: 20px;
+    margin-bottom: 0%;
 }
 .music-artist {
+    text-align: center;
+    width: 80%;
     font-size: 15px;
-    text-align: left;
-    margin-top: 100px;
-    margin-bottom: 200px;
-    margin-left: 0px;
+    margin: 50px auto 0 auto;
 }
 .select {
     color: rgb(228, 145, 0);
@@ -49,16 +48,12 @@
     border: solid 2px #cc07cc;
 }
 
-
-
-
 .music-img img {
     width: 130px;
-
     border-radius: 10px;
 }
 .title-wrapper {
-    width: 5%;
+    width: 100%;
     display: inline-block;
     white-space: nowrap;
     overflow: hidden;
