--- a/New folder/src/Assets/Dashboard.css
+++ b/New folder/src/Assets/Dashboard.css
@@ -3,40 +3,34 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
-
 .side-info {
     position: relative;
     margin: auto 4vw;
-    
 }
-
 .landing-title {
-    color: #1fdf64;
+    color: #cc1fdf;
     font-size: 3.5rem;
     font-weight: bold;
 }
-
 .login-info {
     margin-top: 50px;
 }
-
 .login {
     position: absolute;
     background-color: transparent;
-    background-color: #1fdf64;
-    color: black;
+    background-color: #cc1fdf;
+    color: rgb(71, 192, 15);
     border: none;
     border-radius: 20px;
     font-weight: bold;
     padding: 1vh 2vw;
     cursor: pointer;
 }
-
 .login:hover {
     padding: 1.2vh 2.2vw;
 }
 .side-image {
-    background-image: url(../Assets/Images/background.jpg);
+    background-image: url(../Assets/Images/BCdashboard.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
